--- a/requirements-base.txt
+++ b/requirements-base.txt
@@ -13,6 +13,7 @@ django-registration-redux==2.6
 git+https://github.com/mytardis/django-tastypie.git@mytardis-dj1.9#egg=django-tastypie
 git+https://github.com/mytardis/django-tastypie-swagger.git@mytardis-dj1.9#egg=django-tastypie-swagger
 django-user-agents==0.3.2
+elasticsearch>=6.0.0,<7.0.0
 django-storages==1.7.1
 future==0.17.1
 gunicorn==19.9.0
@@ -33,5 +34,6 @@ git+https://github.com/mytardis/python-magic.git#egg=python-magic
 pytz==2019.1
 requests==2.22.0
 six==1.12.0
+django-elasticsearch-dsl
 uritemplate==3.0.0
 django-webpack-loader==0.6.0
