moving search to app

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,8 @@ tardis/apps/*
 !tardis/apps/slideshow_view
 !tardis/apps/sftp
 !tardis/apps/social_auth
+!tardis/apps/search_v2
+tardis/tardis_portal/filters/*
+!tardis/tardis_portal/filters/__init__.py
+!tardis/tardis_portal/filters/diffractionimage.py
+!tardis/tardis_portal/filters/jeolsem.py
