--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,6 @@ before_install:
 install:
 - pip install -r requirements.txt
 
-# Command to run Pylint
-script: pylint tardis
+script:
+- pylint tardis
+- python test.py
