--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "backbone": "^0.9.2",
     "backbone-forms": "^0.14.1",
     "blueimp-file-upload": "^9.24.1",
-    "bootstrap": "^3.4.0",
+    "bootstrap": "^4.3.1",
     "bootstrap-3-typeahead": "^4.0.2",
     "clipboard": "^1.5.10",
     "font-awesome": "^4.7.0",
@@ -21,6 +21,7 @@
     "jquery-ui-dist": "^1.12.1",
     "mustache": "^2.3.0",
     "ng-dialog": "0.3.4",
+    "popper.js": "^1.14.7",
     "underscore": "^1.3.1",
     "underscore.string": "^3.3.5"
   },
