--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -3,4 +3,8 @@ coverage==4.5.2
 django-nose==1.4.6
 flexmock==0.10.3
 nose==1.3.7
+pylint==1.9.4; python_version < "3.0" # pyup: <2.0
+pylint==2.2.2; python_version >= "3.5"
+pylint-django==0.11.1; python_version < "3.0" # pyup: <1.0
+pylint-django==2.0.5; python_version >= "3.5"
 selenium==3.141.0
