--- a/requirements-base.txt
+++ b/requirements-base.txt
@@ -6,14 +6,14 @@ bleach==3.1.0
 celery==4.2.1
 django-bootstrap-form==3.4
 django-extensions==2.1.5
--e git+https://github.com/mytardis/django-form-utils.git@django-1.11-upgrade#egg=django-form-utils
+git+https://github.com/mytardis/django-form-utils.git@django-1.11-upgrade#egg=django-form-utils
 django-haystack==2.8.1
 django-jstemplate==1.3.8
 django-npm==1.0.0
 django-registration-redux==2.5
 # django-tastypie
--e git+https://github.com/mytardis/django-tastypie.git@mytardis-dj1.9#egg=django-tastypie
--e git+https://github.com/mytardis/django-tastypie-swagger.git@mytardis-dj1.9#egg=django-tastypie-swagger
+git+https://github.com/mytardis/django-tastypie.git@mytardis-dj1.9#egg=django-tastypie
+git+https://github.com/mytardis/django-tastypie-swagger.git@mytardis-dj1.9#egg=django-tastypie-swagger
 django-user-agents==0.3.2
 elasticsearch==1.9.0 # pyup: <2
 future==0.17.1
@@ -32,7 +32,7 @@ pysolr==2.1.0 # pyup: >=2.1.0,<3
 pystache==0.5.4
 python-dateutil==2.8.0
 # python-magic
--e git+https://github.com/mytardis/python-magic.git#egg=python-magic
+git+https://github.com/mytardis/python-magic.git#egg=python-magic
 pytz==2018.9
 rdflib==4.2.2
 requests==2.21.0
