Improving downloads and recall requests for S3 and HSM files.
For S3 objects, it is better to redirect the download request to
the Object Store, rather than streaming it via Django.

For files on Hierarchical Storage Management (HSM) systems, we
need to check if they are offline (zero blocks on disk) before
attempting to download them, and we need to offer the user the
ability to request recalling a file from tape / archive.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.egg-info/
 *.log
 *.prof
+__pycache__/
 *.pyc
 *.sqlite
 *.wsgi
@@ -36,12 +37,14 @@ tardis/apps/*
 !tardis/apps/dl_mapper_df_dir_only
 !tardis/apps/equipment
 !tardis/apps/filepicker
+!tardis/apps/hsm
 !tardis/apps/mx_views
 !tardis/apps/oaipmh
 !tardis/apps/openid_migration
 !tardis/apps/publication_forms
 !tardis/apps/push_to
 !tardis/apps/related_info
+!tardis/apps/s3utils
 !tardis/apps/slideshow_view
 !tardis/apps/sftp
 !tardis/apps/social_auth
