--- a/package.json
+++ b/package.json
@@ -41,7 +41,11 @@
     "grunt-cli": "^1.2.0",
     "grunt-contrib-qunit": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.6.0",
+    "imports-loader": "^0.8.0",
     "jquery-mockjax": "^2.4.0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
     "minimatch": "^3.0.2",
     "qunit": "^2.9.2",
