--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "qunit": "^2.9.2",
     "react": "^16.8.3",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.6",
     "webpack-bundle-tracker": "^0.4.2-beta",
