--- a/package.json
+++ b/package.json
@@ -63,6 +63,6 @@
     "pretest": "npm run eslint.jquery && npm run eslint.angular",
     "test": "grunt test --verbose",
     "dev": "webpack --config webpack.config.js --progress --colors --watch --mode development",
-    "build": "webpack --config webpack.config.js --progress --colors --watch --mode production"
+    "build": "webpack --config webpack.config.js --progress --colors --mode production"
   }
 }
