--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ docs/make.bat
 docs/pydoc
 eggs/
 node_modules/
+assets/bundles/
 parts/
 tardis/settings.py
 tardis/tardis_portal/tests/rifcs/MyTARDIS-1.xml
