--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "backbone": "^0.9.2",
     "backbone-forms": "^0.14.1",
     "blueimp-file-upload": "^9.24.1",
-    "bootstrap": "^3.4.1",
+    "bootstrap": "^3.4.0",
     "bootstrap-3-typeahead": "^4.0.2",
     "clipboard": "^1.5.10",
     "font-awesome": "^4.7.0",
+    "glob": "^7.1.3",
     "jquery": "^3.3.1",
     "jquery-migrate": "^3.0.1",
     "jquery-ui": "^1.12.1",
@@ -62,7 +63,7 @@
     "eslint.angular": "eslint -c .eslintrc.angular tardis/tardis_portal/static/js/facility_view.js",
     "pretest": "npm run eslint.jquery && npm run eslint.angular",
     "test": "grunt test --verbose",
-    "dev": "webpack --config webpack.config.js --progress --colors --watch --mode development",
+    "dev": "webpack --config webpack.config.js --progress --colors --watch --display-error-details --mode development",
     "build": "webpack --config webpack.config.js --progress --colors --mode production"
   }
 }
