--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ before_install:
 
 # Commands to install dependencies:
 install:
+- npm install
+- npm run-script build
 - pip install -r requirements.txt
 
 script:
