don't lint vender js

--- a/.codacy.yml
+++ b/.codacy.yml
@@ -1,9 +1,10 @@
 ---
 engines:
- pylint:
-   enabled: false
+  pylint:
+    enabled: false
 exclude_paths:
-  - 'tardis/tardis_portal/static/js/lib/**'
+  - 'assets/css/jquery-ui/**'
+  - 'assets/js/lib/**'
   - 'tardis/apps/push_to/static/push-to/bootstrap/**'
   - 'tardis/apps/push_to/static/push-to/typeahead.bundle.js'
   - 'tardis/apps/push_to/static/push-to/angular-typeahead.js'
