--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "font-awesome": "^4.7.0",
     "glob": "^7.1.3",
     "jquery": "^3.3.1",
-    "jquery-migrate": "^3.0.1",
     "jquery-ui": "^1.12.1",
     "jquery-ui-dist": "^1.12.1",
     "mustache": "^2.3.0",
@@ -41,6 +40,7 @@
     "grunt": "^1.0.4",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-qunit": "^3.1.0",
+    "grunt-webpack": "^3.1.3",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
     "imports-loader": "^0.8.0",
@@ -52,6 +52,7 @@
     "qunit": "^2.9.2",
     "react": "^16.8.3",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.2.3",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.6",
@@ -59,9 +60,10 @@
     "webpack-cli": "^3.2.3"
   },
   "scripts": {
-    "eslint.jquery": "eslint -c .eslintrc tardis/tardis_portal/static/js/jquery/tardis_portal/ tardis/tardis_portal/static/js/main.js tardis/tardis_portal/static/js/backbone-models.js js_tests/jquery/tardis_portal/ tardis/apps/sftp/static/js/sftp/sftp.js tardis/apps/openid_migration/static/js/openid_migration/migrate_accounts.js",
+    "eslint.jquery": "eslint -c .eslintrc assets/js/tardis_portal js_tests/tardis_portal/ tardis/apps/sftp/static/js/sftp/sftp.js tardis/apps/openid_migration/static/js/openid_migration/migrate_accounts.js",
     "eslint.angular": "eslint -c .eslintrc.angular tardis/tardis_portal/static/js/facility_view.js",
-    "pretest": "npm run eslint.jquery && npm run eslint.angular",
+    "test-build": "webpack --config test-webpack.config.js --progress --colors --mode production",
+    "pretest": "npm run eslint.jquery && npm run eslint.angular && npm run test-build",
     "test": "grunt test --verbose",
     "dev": "webpack --config webpack.config.js --progress --colors --watch --display-error-details --mode development",
     "build": "webpack --config webpack.config.js --progress --colors --mode production"
