--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ tardis/settings.py
 tardis/tardis_portal/tests/rifcs/MyTARDIS-1.xml
 var/
 versions.cfg
+webpack-stats.json
 tardis_db
 tardis/apps/*
 !tardis/apps/__init__.py
