We don't need to skip LDAP tests in our Docker CI environment

--- a/docker-ci/Dockerfile-test
+++ b/docker-ci/Dockerfile-test
@@ -8,7 +8,8 @@ RUN apt-get update && apt-get install \
     xvfb \
     libxi6 \
     libgconf-2-4 \
-    wget
+    wget \
+    slapd ldap-utils
 RUN curl -sS -o - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add
 RUN echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list
 RUN apt-get update && apt-get install -qy google-chrome-stable
