--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,10 @@ python:
   - "3.7"
 
 before_install:
- - sudo apt update
- - sudo apt install -y -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" libldap2-dev libmagickwand-dev libsasl2-dev libssl-dev libxml2-dev libxslt1-dev libmagic-dev python-dev python-pip zlib1g-dev libfreetype6-dev libjpeg-dev
+ - sudo apt-get update
+ - sudo apt-get install -y -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" libldap2-dev libmagickwand-dev libsasl2-dev libssl-dev libxml2-dev libxslt1-dev libmagic-dev python-dev python-pip zlib1g-dev libfreetype6-dev libjpeg-dev
+ - sudo apt-get install -y -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" slapd ldap-utils apparmor-utils
+ - sudo aa-complain /usr/sbin/slapd
 
 # Commands to install dependencies:
 install:
