--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ python:
 before_install:
  - sudo apt-get update
  - sudo apt-get install -y -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" libldap2-dev libmagickwand-dev libsasl2-dev libssl-dev libxml2-dev libxslt1-dev libmagic-dev python-dev python-pip zlib1g-dev libfreetype6-dev libjpeg-dev
- - sudo apt-get install -y -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" slapd ldap-utils apparmor-utils
- - sudo aa-complain /usr/sbin/slapd
+ - sudo apt-get install -y -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" slapd ldap-utils
 
 # Commands to install dependencies:
 install:
