--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "angular-resource": "1.7.8",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
+    "babel-loader": "^8.0.5",
     "backbone": "^0.9.2",
     "backbone-forms": "^0.14.1",
     "blueimp-file-upload": "^9.31.0",
@@ -36,6 +36,9 @@
     "minimatch": "^3.0.2",
     "mustache": "^2.3.0",
     "react": "^16.8.6",
+    "react-datepicker": "^2.2.0",
+    "react-dom": "^16.8.5",
+    "react-tag-autocomplete": "^5.8.0",
     "sprintf-js": "^1.1.2",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.3.0",
