--- a/.eslintrc
+++ b/.eslintrc
@@ -8,137 +8,35 @@
     }
   },
   "rules": {
-    "camelcase": [
-      1,
-      {
-        "properties": "always"
-      }
-    ],
-    "comma-spacing": [
-      2,
-      {
-        "before": false,
-        "after": true
-      }
-    ],
-    "complexity": [
-      "error",
-      {
-        "max": 4
-      }
-    ],
-    "curly": [
-      2,
-      "all"
-    ],
-    "dot-notation": [
-      2,
-      {
-        "allowKeywords": true
-      }
-    ],
-    "eqeqeq": [
-      1
-    ],
-    "indent": [
-      2,
-      4
-    ],
-    "key-spacing": [
-      2,
-      {
-        "beforeColon": false,
-        "afterColon": true
-      }
-    ],
-    "new-cap": [
-      0,
-      {
-        "newIsCap": true,
-        "capIsNew": true
-      }
-    ],
-    "no-alert": [
-      0
-    ],
-    "no-eval": [
-      2
-    ],
-    "no-extend-native": [
-      2,
-      {
-        "exceptions": [
-          "Date",
-          "String"
-        ]
-      }
-    ],
-    "no-multi-spaces": [
-      2
-    ],
-    "no-octal-escape": [
-      2
-    ],
-    "no-underscore-dangle": [
-      2
-    ],
-    "no-unused-vars": [
-      2,
-      {
-        "vars": "local",
-        "args": "none"
-      }
-    ],
-    "no-script-url": [
-      2
-    ],
-    "no-shadow": [
-      2,
-      {
-        "hoist": "functions"
-      }
-    ],
-    "no-use-before-define": [
-      1
-    ],
-    "object-shorthand": 0,
-    "quotes": [
-      1,
-      "double"
-    ],
-    /*"linebreak-style": [
-        2,
-        "windows"
-    ],*/
-    "semi": [
-      2,
-      "always"
-    ],
-    "space-before-blocks": [
-      2,
-      "always"
-    ],
-    "space-before-function-paren": [
-      2,
-      {
-        "anonymous": "never",
-        "named": "never"
-      }
-    ],
-    "space-infix-ops": [
-      2,
-      {
-        "int32Hint": false
-      }
-    ],
-    "strict": [
-      0,
-      "function"
-    ],
-    "wrap-iife": [
-      1
-    ]
-  },
+        "camelcase": [1, {"properties": "always"}],
+        "comma-spacing": [2, {"before": false, "after": true}],
+        "complexity": ["error", { "max": 4 }],
+        "curly": [2, "all"],
+        "dot-notation": [2, {"allowKeywords": true}],
+        "eqeqeq": [1],
+        "indent": [2, 4],
+        "key-spacing": [2, {"beforeColon": false, "afterColon": true}],
+        "new-cap": [0, {"newIsCap": true, "capIsNew": true}],
+        "no-alert": [0],
+        "no-eval": [2],
+        "no-extend-native": [2, {"exceptions": ["Date", "String"]}],
+        "no-multi-spaces": [2],
+        "no-octal-escape": [2],
+        "no-underscore-dangle": [2],
+        "no-unused-vars": [2, {"vars": "local", "args": "none"}],
+        "no-script-url": [2],
+        "no-shadow": [2, {"hoist": "functions"}],
+        "no-use-before-define": [1],
+        "object-shorthand": 0,
+        "quotes": [1, "double"],
+        "linebreak-style": [2, "unix"],
+        "semi": [2, "always"],
+        "space-before-blocks": [2, "always"],
+        "space-before-function-paren": [2, {"anonymous": "never", "named": "never"}],
+        "space-infix-ops": [2, {"int32Hint": false}],
+        "strict": [0, "function"],
+        "wrap-iife": [1]
+    },
   "env": {
     "browser": true,
     "commonjs": true,
