--- a/.eslintrc
+++ b/.eslintrc
@@ -53,6 +53,10 @@
       "rules": {
         "no-use-before-define": "off",
         "camelcase": 2,
+        "quotes": [0, "double"],
+        "indent": 0,
+        "dot-notation": 0,
+        "space-before-function-paren": 0,
         "complexity": [
           "error",
           {
