--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "backbone": "^0.9.2",
     "backbone-forms": "^0.14.1",
     "blueimp-file-upload": "^9.24.1",
-    "bootstrap": "^3.4.0",
+    "bootstrap": "^3.4.1",
     "bootstrap-3-typeahead": "^4.0.2",
     "clipboard": "^1.5.10",
     "font-awesome": "^4.7.0",
@@ -24,40 +24,41 @@
     "ng-dialog": "0.3.4",
     "sprintf-js": "^1.1.2",
     "underscore": "^1.3.1",
-    "underscore.string": "^3.3.5"
-  },
-  "devDependencies": {
+    "underscore.string": "^3.3.5",
+    "webpack": "^4.29.6",
+    "webpack-bundle-tracker": "^0.4.2-beta",
+    "webpack-cli": "^3.2.3",
+    "clean-webpack-plugin": "^1.0.1",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
-    "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
-    "eslint": "^5.14.1",
-    "eslint-config-angular": "^0.5.0",
-    "eslint-plugin-angular": "^3.3.0",
     "expose-loader": "^0.7.5",
     "file-loader": "^3.0.1",
-    "grunt": "^1.0.4",
-    "grunt-cli": "^1.2.0",
-    "grunt-contrib-qunit": "^3.1.0",
     "grunt-webpack": "^3.1.3",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
     "imports-loader": "^0.8.0",
-    "jquery-mockjax": "^2.4.0",
-    "less": "^3.9.0",
-    "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
     "minimatch": "^3.0.2",
-    "qunit": "^2.9.2",
     "react": "^16.8.3",
     "style-loader": "^0.23.1",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "terser-webpack-plugin": "^1.2.3",
     "uglifyjs-webpack-plugin": "^2.1.2",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.29.6",
-    "webpack-bundle-tracker": "^0.4.2-beta",
-    "webpack-cli": "^3.2.3"
+    "url-loader": "^1.1.2"
+  },
+  "devDependencies": {
+    "eslint": "^5.14.1",
+    "eslint-config-angular": "^0.5.0",
+    "eslint-plugin-angular": "^3.3.0",
+    "grunt": "^1.0.4",
+    "grunt-cli": "^1.2.0",
+    "grunt-contrib-qunit": "^3.1.0",
+    "grunt-webpack": "^3.1.3",
+    "jquery-mockjax": "^2.4.0",
+    "qunit": "^2.9.2"
   },
   "scripts": {
     "eslint.jquery": "eslint -c .eslintrc assets/js/tardis_portal js_tests/tardis_portal/ tardis/apps/sftp/static/js/sftp/sftp.js tardis/apps/openid_migration/static/js/openid_migration/migrate_accounts.js",
