Addressing this problem seen in CI builds: editable mode is not supported for pyproject.toml-style projects

--- a/docker-ci/Dockerfile-build
+++ b/docker-ci/Dockerfile-build
@@ -29,5 +29,4 @@ CMD . /appenv/bin/activate; \
     pip install -U setuptools; \
     pip wheel -r requirements.txt; \
     pip wheel -r requirements-postgres.txt; \
-    pip wheel -r requirements-mysql.txt; \
-    pip wheel -e "git+https://github.com/pypa/pip.git#egg=pip"
+    pip wheel -r requirements-mysql.txt;
