--- a/package.json
+++ b/package.json
@@ -9,43 +9,43 @@
   "dependencies": {
     "angular": "1.6.10",
     "angular-resource": "1.6.10",
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "backbone": "^0.9.2",
     "backbone-forms": "^0.14.1",
     "blueimp-file-upload": "^9.24.1",
     "bootstrap": "^3.4.1",
     "bootstrap-3-typeahead": "^4.0.2",
-    "clipboard": "^1.5.10",
-    "font-awesome": "^4.7.0",
-    "glob": "^7.1.3",
-    "jquery": "^3.3.1",
-    "jquery-ui": "^1.12.1",
-    "jquery-ui-dist": "^1.12.1",
-    "mustache": "^2.3.0",
-    "sprintf-js": "^1.1.2",
-    "underscore": "^1.3.1",
-    "underscore.string": "^3.3.5",
-    "webpack": "^4.29.6",
-    "webpack-bundle-tracker": "^0.4.2-beta",
-    "webpack-cli": "^3.2.3",
     "clean-webpack-plugin": "^1.0.1",
-    "babel": "^6.23.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
+    "clipboard": "^1.5.10",
     "css-loader": "^2.1.0",
     "expose-loader": "^0.7.5",
     "file-loader": "^3.0.1",
+    "font-awesome": "^4.7.0",
+    "glob": "^7.1.3",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
     "imports-loader": "^0.8.0",
-    "mini-css-extract-plugin": "^0.5.0",
-    "minimatch": "^3.0.2",
-    "react": "^16.8.3",
-    "style-loader": "^0.23.1",
+    "jquery": "^3.4.0",
+    "jquery-ui": "^1.12.1",
+    "jquery-ui-dist": "^1.12.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "minimatch": "^3.0.2",
+    "mustache": "^2.3.0",
+    "react": "^16.8.3",
+    "sprintf-js": "^1.1.2",
+    "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.3",
     "uglifyjs-webpack-plugin": "^2.1.2",
-    "url-loader": "^1.1.2"
+    "underscore": "^1.3.1",
+    "underscore.string": "^3.3.5",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.29.6",
+    "webpack-bundle-tracker": "^0.4.2-beta",
+    "webpack-cli": "^3.2.3"
   },
   "devDependencies": {
     "eslint": "^5.14.1",
