--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
     "url": "git+https://github.com/mytardis/mytardis.git"
   },
   "dependencies": {
-    "angular": "1.7.8",
-    "angular-resource": "1.7.8",
+    "angular": "1.6.10",
+    "angular-resource": "1.6.10",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.5",
-    "backbone": "^1.4.0",
+    "babel-loader": "^7.1.5",
+    "backbone": "^0.9.2",
     "backbone-forms": "^0.14.1",
     "blueimp-file-upload": "^9.24.1",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^3.4.1",
     "bootstrap-3-typeahead": "^4.0.2",
-    "clean-webpack-plugin": "^2.0.1",
-    "clipboard": "^2.0.4",
+    "clean-webpack-plugin": "^1.0.1",
+    "clipboard": "^1.5.10",
     "css-loader": "^2.1.0",
     "expose-loader": "^0.7.5",
     "file-loader": "^3.0.1",
@@ -34,7 +34,7 @@
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.6.0",
     "minimatch": "^3.0.2",
-    "mustache": "^3.0.1",
+    "mustache": "^2.3.0",
     "react": "^16.8.3",
     "sprintf-js": "^1.1.2",
     "style-loader": "^0.23.1",
@@ -57,6 +57,18 @@
     "grunt-webpack": "^3.1.3",
     "jquery-mockjax": "^2.4.0",
     "qunit": "^2.9.2"
+  },
+  "greenkeeper": {
+    "ignore": [
+      "angular",
+      "angular-resource",
+      "babel-loader",
+      "backbone",
+      "bootstrap",
+      "clean-webpack-plugin",
+      "clipboard",
+      "mustache"
+    ]
   },
   "scripts": {
     "eslint.jquery": "eslint -c .eslintrc assets/js/tardis_portal js_tests/tardis_portal/ tardis/apps/sftp/static/js/sftp/sftp.js tardis/apps/openid_migration/static/js/openid_migration/migrate_accounts.js",
