--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "url": "git+https://github.com/mytardis/mytardis.git"
   },
   "dependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
     "angular": "1.7.8",
     "angular-resource": "1.7.8",
     "babel": "^6.23.0",
-    "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
     "backbone": "^0.9.2",
     "backbone-forms": "^0.14.1",
