adding advance search feature

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "angular": "1.7.8",
@@ -36,9 +37,11 @@
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.7.0",
     "minimatch": "^3.0.2",
+    "moment": "^2.24.0",
     "mustache": "^2.3.0",
     "react": "^16.8.6",
-    "react-datepicker": "^2.2.0",
+    "react-bootstrap-typeahead": "^4.0.0-alpha.10",
+    "react-datetime": "^2.16.3",
     "react-dom": "^16.8.5",
     "react-tag-autocomplete": "^5.8.0",
     "sprintf-js": "^1.1.2",
