--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "minimatch": "^3.0.2",
     "moment": "^2.24.0",
     "mustache": "^2.3.0",
+    "query-string": "^6.7.0",
     "react": "^16.8.6",
     "react-bootstrap-typeahead": "^4.0.0-alpha.10",
     "react-datetime": "^2.16.3",
