--- a/docker-ci/docker-test.yml
+++ b/docker-ci/docker-test.yml
@@ -10,6 +10,8 @@ services:
       context: ..
       dockerfile: docker-ci/Dockerfile-test
     image: mytardis/mytardis-test
+    environment:
+      ELASTICSEARCH_URL: 'http://es:9200'
     volumes:
       - ../tardis:/home/webapp/tardis
       - ../docs:/home/webapp/docs
