s3utils app, initially offering download redirects to S3

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.egg-info/
 *.log
 *.prof
+__pycache__/
 *.pyc
 *.sqlite
 *.wsgi
@@ -33,7 +34,6 @@ webpack-stats.json
 tardis_db
 tardis/apps/*
 !tardis/apps/__init__.py
-!tardis/apps/anzsrc_codes
 !tardis/apps/deep_storage_download_mapper
 !tardis/apps/dl_mapper_df_dir_only
 !tardis/apps/equipment
@@ -41,9 +41,9 @@ tardis/apps/*
 !tardis/apps/mx_views
 !tardis/apps/oaipmh
 !tardis/apps/openid_migration
-!tardis/apps/publication_forms
 !tardis/apps/push_to
 !tardis/apps/related_info
+!tardis/apps/s3utils
 !tardis/apps/slideshow_view
 !tardis/apps/sftp
 !tardis/apps/social_auth
