--- a/requirements-base.txt
+++ b/requirements-base.txt
@@ -33,4 +33,5 @@ git+https://github.com/mytardis/python-magic.git#egg=python-magic
 pytz==2019.1
 requests==2.22.0
 six==1.12.0
+uritemplate==3.0.0
 django-webpack-loader==0.6.0
