--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "minimatch": "^3.0.2",
     "moment": "^2.24.0",
     "mustache": "^2.3.0",
+    "prop-types": "^15.7.2",
     "query-string": "^6.7.0",
     "react": "^16.8.6",
     "react-bootstrap-typeahead": "^4.0.0-alpha.10",
@@ -57,9 +58,14 @@
     "webpack-cli": "^3.3.3"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.2",
     "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-angular": "^0.5.0",
     "eslint-plugin-angular": "^4.0.1",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
     "grunt": "^1.0.4",
     "grunt-cli": "^1.3.2",
     "grunt-contrib-qunit": "^3.1.0",
@@ -70,8 +76,9 @@
   "scripts": {
     "eslint.jquery": "eslint -c .eslintrc assets/js/tardis_portal js_tests/tardis_portal/ tardis/apps/sftp/static/js/sftp/sftp.js tardis/apps/openid_migration/static/js/openid_migration/migrate_accounts.js",
     "eslint.angular": "eslint -c .eslintrc.angular assets/js/tardis_portal/facility_view/facility_view.js",
+    "eslint.react": "eslint -c .eslintrc.react --ext .js,.jsx assets/js/app/search/",
     "test-build": "webpack --config test-webpack.config.js --progress --colors --mode production",
-    "pretest": "npm run eslint.jquery && npm run eslint.angular && npm run test-build",
+    "pretest": "npm run eslint.jquery && npm run eslint.angular && npm run eslint.react && npm run test-build",
     "test": "grunt test --verbose",
     "dev": "webpack --config webpack.config.js --progress --colors --watch --display-error-details --mode development",
     "build": "webpack --config webpack.config.js --progress --colors --mode production"
