--- a/docker-ci/Dockerfile-base
+++ b/docker-ci/Dockerfile-base
@@ -35,6 +35,6 @@ RUN chown -R webapp:webapp /appenv
 RUN chown -R webapp:webapp /home/webapp
 USER webapp
 RUN virtualenv --system-site-packages /appenv
-RUN . /appenv/bin/activate; pip install -U pip wheel
+RUN . /appenv/bin/activate; pip install -U -e "git+https://github.com/pypa/pip.git#egg=pip" wheel
 COPY . /home/webapp/
 USER root
