--- a/.gitignore
+++ b/.gitignore
@@ -47,7 +47,7 @@ tardis/apps/*
 !tardis/apps/slideshow_view
 !tardis/apps/sftp
 !tardis/apps/social_auth
-!tardis/apps/search_v2
+!tardis/apps/search
 tardis/tardis_portal/filters/*
 !tardis/tardis_portal/filters/__init__.py
 !tardis/tardis_portal/filters/diffractionimage.py
