--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "grunt-contrib-qunit": "^3.1.0",
     "grunt-webpack": "^3.1.3",
     "jquery-mockjax": "^2.5.0",
+    "js-yaml": "^3.13.1",
     "qunit": "^2.9.2"
   },
   "scripts": {
