--- a/requirements-base.txt
+++ b/requirements-base.txt
@@ -12,6 +12,8 @@ django-jstemplate==1.3.8
 django-registration-redux==2.6
 django-tastypie==0.14.0
 git+https://github.com/mytardis/django-tastypie-swagger.git@mytardis-dj1.11-py3#egg=django-tastypie-swagger
+djangorestframework==3.9.4; python_version < "3.0" # pyup: <2.0
+djangorestframework==3.10.0; python_version >= "3.5"
 django-user-agents==0.4.0
 django-webpack-loader==0.6.0
 elasticsearch==6.4.0 # pyup: <7.0
