--- a/requirements-base.txt
+++ b/requirements-base.txt
@@ -5,8 +5,11 @@ bleach==3.1.0
 boto3==1.9.242
 celery==4.3.0
 django-bootstrap-form==3.4
+django-crispy-forms==1.7.2
 django-extensions==2.2.3
 django-elasticsearch-dsl==6.4.2
+django-filter==1.1.0; python_version < "3.0" # pyup: <2.0
+django-filter==2.2.0; python_version >= "3.5"
 git+https://github.com/mytardis/django-form-utils.git@django-1.11-upgrade#egg=django-form-utils
 django-jstemplate==1.3.8
 django-registration-redux==2.6
