--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "grunt-webpack": "^3.1.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
+    "jest-fetch-mock": "^2.1.2",
     "jquery-mockjax": "^2.5.0",
     "js-yaml": "^3.13.1",
     "qunit": "^2.9.2",
@@ -86,7 +87,7 @@
     "test-build": "webpack --config test-webpack.config.js --progress --colors --mode production",
     "pretest": "npm run eslint.jquery && npm run eslint.angular && npm run eslint.react && npm run test-build",
     "test": "grunt test --verbose",
-    "test-react": "jest --config jest.config.js",
+    "test-react": "jest --testMatch=\"<rootDir>/assets/js/app/search/__tests__/*.spec.jsx\" --config jest.config.js",
     "dev": "webpack --config webpack.config.js --progress --colors --watch --display-error-details --mode development",
     "build": "webpack --config webpack.config.js --progress --colors --mode production"
   }
