--- a/requirements-base.txt
+++ b/requirements-base.txt
@@ -12,7 +12,7 @@ django-jstemplate==1.3.8
 django-registration-redux==2.6
 # django-tastypie
 git+https://github.com/mytardis/django-tastypie.git@mytardis-dj1.9#egg=django-tastypie
-git+https://github.com/mytardis/django-tastypie-swagger.git@mytardis-dj1.9#egg=django-tastypie-swagger
+git+https://github.com/mytardis/django-tastypie-swagger.git@mytardis-dj1.11-py3#egg=django-tastypie-swagger
 django-user-agents==0.4.0
 django-webpack-loader==0.6.0
 elasticsearch==6.4.0 # pyup: <7.0
