--- a/requirements-base.txt
+++ b/requirements-base.txt
@@ -10,8 +10,7 @@ django-elasticsearch-dsl==6.4.2
 git+https://github.com/mytardis/django-form-utils.git@django-1.11-upgrade#egg=django-form-utils
 django-jstemplate==1.3.8
 django-registration-redux==2.6
-# django-tastypie
-git+https://github.com/mytardis/django-tastypie.git@mytardis-dj1.9#egg=django-tastypie
+django-tastypie==0.14.0
 git+https://github.com/mytardis/django-tastypie-swagger.git@mytardis-dj1.11-py3#egg=django-tastypie-swagger
 django-user-agents==0.4.0
 django-webpack-loader==0.6.0
