--- a/requirements-base.txt
+++ b/requirements-base.txt
@@ -27,6 +27,7 @@ kombu==4.6.5
 lxml==4.4.1
 paramiko==2.6.0
 pillow==6.2.0
+git+https://github.com/mytardis/pyoai.git@v2.5.1-mytardis-py3#egg=pyoai
 pystache==0.5.4
 python-dateutil==2.8.0
 # python-magic
