--- a/.eslintrc
+++ b/.eslintrc
@@ -28,7 +28,7 @@
         "no-shadow": [2, {"hoist": "functions"}],
         "no-use-before-define": [1],
         "object-shorthand": 0,
-        "quotes": [1, "double"],
+        "quotes": [1, "double", { "allowTemplateLiterals": true }],
         "linebreak-style": 0,
         "semi": [2, "always"],
         "space-before-blocks": [2, "always"],
