--- a/package.json
+++ b/package.json
@@ -84,11 +84,11 @@
   "scripts": {
     "eslint.jquery": "eslint -c .eslintrc assets/js/tardis_portal js_tests/tardis_portal/ tardis/apps/sftp/static/js/sftp/sftp.js tardis/apps/openid_migration/static/js/openid_migration/migrate_accounts.js",
     "eslint.angular": "eslint -c .eslintrc.angular assets/js/tardis_portal/facility_view/facility_view.js",
-    "eslint.react": "eslint -c .eslintrc.react --ext .js,.jsx assets/js/app/search/",
+    "eslint.react": "eslint -c .eslintrc.react --ext .js,.jsx assets/js/apps/search/",
     "test-build": "webpack --config test-webpack.config.js --progress --colors --mode production",
     "pretest": "npm run eslint.jquery && npm run eslint.angular && npm run eslint.react && npm run test-build",
-    "test": "grunt test --verbose",
-    "test-react": "jest --testMatch=\"<rootDir>/assets/js/app/search/__tests__/*.spec.jsx\" --config jest.config.js",
+    "test-react": "jest --testMatch=\"<rootDir>/assets/js/apps/search/__tests__/*.spec.jsx\" --config jest.config.js",
+    "test": "grunt test --verbose && npm run test-react",
     "dev": "webpack --config webpack.config.js --progress --colors --watch --display-error-details --mode development",
     "build": "webpack --config webpack.config.js --progress --colors --mode production"
   }
