--- a/.github/workflows/mytardis-matrix-test.yml
+++ b/.github/workflows/mytardis-matrix-test.yml
@@ -16,6 +16,13 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install prerequisites
+      run: |
+        sudo apt-get update -yqq
+        sudo apt-get -yqq install --no-install-recommends -o=Dpkg::Use-Pty=0 \
+          libldap2-dev libsasl2-dev libmagic-dev libmagickwand-dev \
+          libssl-dev libxml2-dev libxslt1-dev zlib1g-dev \
+          libfreetype6-dev libjpeg-dev
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
