--- a/docker-ci/docker-test.yml
+++ b/docker-ci/docker-test.yml
@@ -25,7 +25,7 @@ services:
       - mysql
       - es
   pg:
-    image: postgres
+    image: postgres:9.6
     environment:
       POSTGRES_PASSWORD: postgres
   mysql:
