Add xxhash pip lib

--- a/requirements-base.txt
+++ b/requirements-base.txt
@@ -34,3 +34,4 @@ git+https://github.com/mytardis/python-magic.git#egg=python-magic
 pytz==2019.2
 requests==2.22.0
 uritemplate==3.0.0
+xxhash==1.4.3
