--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
+    "@testing-library/react": "latest",
     "angular": "1.7.9",
     "angular-resource": "1.7.8",
     "babel-loader": "^8.0.6",
@@ -47,6 +48,7 @@
     "react-dom": "^16.10.2",
     "react-tag-autocomplete": "^5.8.0",
     "react-treebeard": "v4.2.4-beta.0",
+    "regenerator-runtime": "^0.13.3",
     "sprintf-js": "^1.1.2",
     "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^2.2.2",
@@ -88,7 +90,7 @@
     "eslint.react": "eslint -c .eslintrc.react --ext .jsx assets/js/apps/",
     "test-build": "webpack --config test-webpack.config.js --progress --colors --mode production",
     "pretest": "npm run eslint.jquery && npm run eslint.angular && npm run eslint.react && npm run test-build",
-    "test-react": "jest --testMatch=\"<rootDir>/assets/js/apps/search/__tests__/*.spec.jsx\" --config jest.config.js",
+    "test-react": "jest --collectCoverage=true --testMatch=\"<rootDir>/assets/js/apps/**/__tests__/*.spec.jsx\" --config jest.config.js",
     "test": "grunt test --verbose && npm run test-react",
     "dev": "webpack --config webpack.config.js --progress --colors --watch --display-error-details --mode development",
     "build": "webpack --config webpack.config.js --progress --colors --mode production"
