update coverage data to codecov

--- a/.github/workflows/mytardis-npm-test.yml
+++ b/.github/workflows/mytardis-npm-test.yml
@@ -13,3 +13,10 @@ jobs:
           node-version: '10.x'
       - run: npm install
       - run: npm run test-react
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: coverage/coverage-final.json
+          flags: react-tests
+          fail_ci_if_error: true
