--- a/.github/workflows/mytardis-npm-test.yml
+++ b/.github/workflows/mytardis-npm-test.yml
@@ -18,5 +18,5 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: coverage/coverage-final.json
-          flags: react-tests
+          flags: reacttests
           fail_ci_if_error: true
