--- a/.github/workflows/mytardis-npm-test.yml
+++ b/.github/workflows/mytardis-npm-test.yml
@@ -19,4 +19,4 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: coverage/coverage-final.json
           flags: reacttests
-          fail_ci_if_error: true
+          fail_ci_if_error: false
