--- a/requirements-base.txt
+++ b/requirements-base.txt
@@ -38,6 +38,7 @@ uritemplate==3.0.0
 graphene-django==2.8.0
 graphene-django-plus==1.3.2
 django-filter==2.2.0
+django-crispy-forms==1.8.1
 django-graphql-jwt==0.3.0
 django-graphiql==0.4.4
 django-cors-headers==3.2.1
