--- a/requirements-local.txt
+++ b/requirements-local.txt
@@ -1,3 +1,3 @@
 -r requirements-postgres.txt
--r requirements-s3.txt
--r requirements-elastic.txt
+#-r requirements-s3.txt
+#-r requirements-elastic.txt
