--- a/requirements-base.txt
+++ b/requirements-base.txt
@@ -33,3 +33,4 @@ git+https://github.com/mytardis/python-magic.git#egg=python-magic
 pytz==2019.2
 requests==2.22.0
 uritemplate==3.0.0
+django-graphql-jwt==0.3.0
