--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/preset-env": "^7.10.3",
     "@babel/preset-react": "^7.10.1",
+    "@emotion/core": "^10.0.27",
     "@testing-library/react": "latest",
     "angular": "1.8.0",
     "angular-resource": "1.8.0",
@@ -50,6 +51,7 @@
     "react-bootstrap-typeahead": "^4.0.0-alpha.10",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.13.0",
+    "react-spinners": "^0.8.0",
     "react-tag-autocomplete": "^5.13.1",
     "react-treebeard": "v4.2.4-beta.0",
     "regenerator-runtime": "^0.13.3",
