--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "backbone": "^0.9.2",
     "backbone-forms": "^0.14.1",
     "blueimp-file-upload": "^9.31.0",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.5.0",
     "bootstrap-3-typeahead": "^4.0.2",
     "clean-webpack-plugin": "^1.0.1",
     "clipboard": "^2.0.4",
@@ -41,10 +41,13 @@
     "prop-types": "^15.7.2",
     "query-string": "^6.8.3",
     "react": "^16.10.2",
+    "react-bootstrap": "^1.0.1",
     "react-bootstrap-typeahead": "^4.0.0-alpha.10",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.10.2",
+    "react-icons": "^3.10.0",
     "react-tag-autocomplete": "^5.8.0",
+    "react-treebeard": "^3.2.4",
     "select2": "^4.0.12",
     "sprintf-js": "^1.1.2",
     "style-loader": "^1.0.0",
@@ -57,6 +60,10 @@
     "webpack-cli": "^3.3.9"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^5.3.18",
+    "@storybook/addon-links": "^5.3.18",
+    "@storybook/addons": "^5.3.18",
+    "@storybook/react": "^5.3.18",
     "babel-eslint": "^10.0.3",
     "bootlint": "^0.16.7",
     "enzyme": "^3.10.0",
@@ -90,6 +97,8 @@
     "test-react": "jest --testMatch=\"<rootDir>/assets/js/apps/search/__tests__/*.spec.jsx\" --config jest.config.js",
     "test": "grunt test --verbose && npm run test-react",
     "dev": "webpack --config webpack.config.js --progress --colors --watch --display-error-details --mode development",
-    "build": "webpack --config webpack.config.js --progress --colors --mode production"
+    "build": "webpack --config webpack.config.js --progress --colors --mode production",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   }
 }
