--- a/package.json
+++ b/package.json
@@ -58,8 +58,7 @@
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-bundle-tracker": "^0.4.3",
-    "webpack-cli": "^3.3.11",
-    "snyk": "^1.333.0"
+    "webpack-cli": "^3.3.11"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
@@ -95,9 +94,6 @@
     "test-react": "jest --collectCoverage=true --testMatch=\"<rootDir>/assets/js/apps/**/__tests__/*.spec.jsx\" --config jest.config.js",
     "test": "grunt test --verbose && npm run test-react",
     "dev": "webpack --config webpack.config.js --progress --colors --watch --display-error-details --mode development",
-    "build": "webpack --config webpack.config.js --progress --colors --mode production",
-    "snyk-protect": "snyk protect",
-    "prepare": "npm run snyk-protect"
-  },
-  "snyk": true
+    "build": "webpack --config webpack.config.js --progress --colors --mode production"
+  }
 }
