--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
+    "@reduxjs/toolkit": "^1.3.6",
     "angular": "^1.7.9",
     "angular-resource": "1.7.8",
     "babel-loader": "^8.0.6",
@@ -46,6 +47,7 @@
     "react-datetime": "^2.16.3",
     "react-dom": "^16.10.2",
     "react-icons": "^3.10.0",
+    "react-redux": "^7.2.0",
     "react-tag-autocomplete": "^5.8.0",
     "react-treebeard": "^3.2.4",
     "select2": "^4.0.12",
